[metadata]
name = sushy-oem-dellemc
summary = Dell EMC OEM extension package for the sushy library
description-file =
    README.md
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/sushy/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    sushy_oem_dellemc

[entry_points]
sushy.resources.manager.oems =
    dell = sushy_oem_dellemc.resources.manager.manager:get_extension


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = sushy_oem_dellemc/locale
domain = sushy_oem_dellemc

[update_catalog]
domain = sushy_oem_dellemc
output_dir = sushy_oem_dellemc/locale
input_file = sushy_oem_dellemc/locale/sushy_oem_dellemc.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sushy_oem_dellemc/locale/sushy_oem_dellemc.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[pbr]
autodoc_index_modules = True
api_doc_dir = reference/api
autodoc_exclude_modules =
    sushy_oem_dellemc.tests.*
