[metadata]
name = sushy-oem-idrac
summary = Dell EMC iDRAC OEM extension package for the sushy library
description_file =
    README.md
long_description_content_type = text/markdown
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/sushy/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    sushy_oem_idrac

[entry_points]
sushy.resources.manager.oems =
    dell = sushy_oem_idrac.resources.manager.manager:get_extension
sushy.resources.system.oems =
    dell = sushy_oem_idrac.resources.system.system:get_extension
sushy.resources.task.oems =
    dell = sushy_oem_idrac.resources.taskservice.task:get_extension

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = sushy_oem_idrac/locale
domain = sushy_oem_idrac

[update_catalog]
domain = sushy_oem_idrac
output_dir = sushy_oem_idrac/locale
input_file = sushy_oem_idrac/locale/sushy_oem_idrac.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sushy_oem_idrac/locale/sushy_oem_idrac.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[pbr]
autodoc_index_modules = True
api_doc_dir = reference/api
autodoc_exclude_modules =
    sushy_oem_idrac.tests.*
